--- a/website/src/scss/_base.scss
+++ b/website/src/scss/_base.scss
@@ -11,3 +11,11 @@ h2 {
   font-size: 1.5em;
   font-weight: 300;
 }
+
+.blinkAnimation {
+  animation: blinker 2s ease-in-out infinite;
+}
+
+@keyframes blinker {
+  50% { opacity: 0; }
+}
