--- a/website/src/scss/_base.scss
+++ b/website/src/scss/_base.scss
@@ -12,6 +12,18 @@ h2 {
   font-weight: 300;
 }
 
+.subtitle {
+  font-family: 'Advent Pro', 'Catamaran', Helvetica, sans-serif;
+  font-weight: 500;
+  letter-spacing: 2px;
+}
+.title {
+  font-family: 'Catamaran', 'Open Sans', Helvetica, sans-serif;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+
+/* Loading Spinner */
 .blinkAnimation {
   animation: blinker 2s ease-in-out infinite;
 }
