--- a/website/src/scss/_base.scss
+++ b/website/src/scss/_base.scss
@@ -1,6 +1,6 @@
 @import 'reset';
 
-h1, h2, h3, p, span {
+h1, h2, h3, p, a, span, div {
   font-family: 'Open Sans', Helvetica, sans-serif;
 }
 h1 {
@@ -8,10 +8,11 @@ h1 {
   font-weight: 700;
 }
 h2 {
-  font-size: 1.5em;
+  font-size: 1.8em;
   font-weight: 300;
 }
 
+/* Landng Page */
 .subtitle {
   font-family: 'Advent Pro', 'Catamaran', Helvetica, sans-serif;
   font-weight: 500;
