--- a/website/src/scss/_base.scss
+++ b/website/src/scss/_base.scss
@@ -1,6 +1,6 @@
 @import 'reset';
 
-h1, h2, h3, p, a, span, div {
+h1, h2, h3, p, a, span, div, input, label {
   font-family: 'Open Sans', Helvetica, sans-serif;
 }
 h1 {
