Moves canvas title to nice obvious place

--- a/website/src/scss/_base.scss
+++ b/website/src/scss/_base.scss
@@ -1,6 +1,6 @@
 @import 'reset';
 
-h1, h2, h3, p, a, span, div, input, label {
+h1, h2, h3, p, a, span, div, input, label, #text-field-default {
   font-family: 'Open Sans', Helvetica, sans-serif;
 }
 h1 {
